<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.33"
    android:background="@color/background_color"
    tools:context=".ui.InitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/text_field_hint"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/cloudy_sunny" />


            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_field_hint_temperature"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="63sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:background="@drawable/gradient_background_banner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView21"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/rain" />

                        <TextView
                            android:id="@+id/tvrain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_rain_percentage"
                            android:textAlignment="center"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView62"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_rain"
                            android:textAlignment="center"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView23"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/tvWind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_rain_percentage"
                            android:textAlignment="center"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWind_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_wind"
                            android:textAlignment="center"
                            android:textColor="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView26"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_rain_percentage"
                            android:textAlignment="center"
                            android:textColor="@color/text_color"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvHumidity_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_field_hint_humidity"
                            android:textAlignment="center"
                            android:textColor="@color/text_color" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/text_field_hint_next"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_field_hint_7days"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:textColor="@color/text_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDailyForecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>